# deezer-api-cpp

./: .gitignore  CMakeLists.txt  readme.md
src/: CMakeLists.txt  Deezer.cpp  Deezer.h
src/models/: Track.cpp  Track.h  album.cpp  album.h  artist.cpp  artist.h  genre.cpp  genre.h  track.cpp  track.h  user.cpp  user.h
src/utils/: curl_exception.h  curl_utils.cpp  curl_utils.h
test/: tests.cpp
